--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,11 +43,11 @@ dynamic = ["version"]
 dependencies = [
     "brotli; implementation_name=='cpython'",
     "brotlicffi; implementation_name!='cpython'",
-    "certifi",
-    "mutagen",
-    "pycryptodomex",
-    "requests>=2.32.2,<3",
-    "urllib3>=1.26.17,<3",
+    "certifi==2024.7.4",
+    "mutagen==1.46.0",
+    "pycryptodomex==3.15.0",
+    "requests==2.31.0",
+    "urllib3==1.26.19",
     "websockets>=12.0",
 ]
 
